# prism-mcp-tools

./: CONTRIBUTING.md  LICENSE  README.md
docs/architecture/: README.md
mcp-inspector/: .gitignore  Cargo.toml  Makefile
mcp-inspector/examples/: connect_and_test.rs
mcp-inspector/src/: main.rs  models.rs  server.rs  websocket.rs
mcp-inspector/src/api/: connect.rs  mod.rs  sessions.rs  tools.rs
mcp-inspector/src/inspector/: client.rs  discovery.rs  mod.rs  validator.rs
mcp-inspector/static/js/: inspector.js
prism-mcp-clients/: README.md
prism-mcp-clients/advanced_http_client/: Cargo.toml
prism-mcp-clients/advanced_http_client/src/: main.rs
prism-mcp-clients/conservative_http_demo/: Cargo.toml
prism-mcp-clients/conservative_http_demo/src/: main.rs
prism-mcp-clients/http_client/: Cargo.toml
prism-mcp-clients/http_client/src/: main.rs
prism-mcp-clients/websocket_client/: Cargo.toml
prism-mcp-clients/websocket_client/src/: main.rs
prism-mcp-servers/: README.md
prism-mcp-servers/database_server/: Cargo.toml
prism-mcp-servers/database_server/src/: main.rs
prism-mcp-servers/enhanced_echo_server/: Cargo.toml
prism-mcp-servers/enhanced_echo_server/src/: main.rs
prism-mcp-servers/http2_server/: Cargo.toml
prism-mcp-servers/http2_server/src/: main.rs
prism-mcp-servers/http_server/: Cargo.toml
prism-mcp-servers/http_server/src/: main.rs
prism-mcp-servers/plugin_server/: Cargo.toml
prism-mcp-servers/plugin_server/src/: main.rs
prism-mcp-servers/websocket_server/: Cargo.toml
prism-mcp-servers/websocket_server/src/: main.rs
prism-test-utils/: Cargo.toml  README.md
prism-test-utils/src/: assertions.rs  harness.rs  lib.rs  mock_client.rs  mock_server.rs
transport_benchmark/: Cargo.toml
transport_benchmark/src/: main.rs
